src/test/deca/syntax/invalid/without_class/error_multiline_comment2.deca
// Description:
//    Error using multiline comment   
//
// Result:
//    Syntax Error
//    line 9

{
     This should be 
        a multiline comment 
    */

    int x = 0;
    return x; // */ expected before cbrace 
}